# cinema-api

./: .flake8  .gitignore  README.md  db.sqlite3  mkdocs.yml  pyproject.toml
actors/: admin.py  models.py  serializers.py  urls.py  views.py
actors/migrations/: 0001_initial.py
core/: permissions.py  settings.py  urls.py
docs/: index.md
genres/: permissions.py  serializers.py  urls.py  views.py
genres/migrations/: 0001_initial.py
movies/: admin.py  models.py  serializers.py  urls.py  views.py
movies/migrations/: 0001_initial.py
reviews/: admin.py  models.py  serializers.py  urls.py  views.py
reviews/migrations/: 0001_initial.py  0002_alter_reviews_rate.py
